--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notification</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 
@@ -49,8 +49,18 @@
             <div class="post-card card mb-4">
 <!--                <img src="path/to/image.jpg" class="card-img-top" alt="...">-->
                 <div class="card-body">
-                    <h3 class="card-title text-center"><a href="show.html" class="text-decoration-none"> Post Title 1 </a></h3>
-                    <p class="card-text">This is the description of the first post. It's designed to be visually appealing and user-friendly.</p>
+                    <h3 class="card-title text-center"><a href="show.html" class="text-decoration-none paper"> Post Title 1 </a></h3>
+                    <p class="card-text paper">This is the description of the first post. It's designed to be visually appealing and user-friendly.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6">
+            <div class="post-card card mb-4">
+                <!--                <img src="path/to/image.jpg" class="card-img-top" alt="...">-->
+                <div class="card-body">
+                    <h3 class="card-title text-center"><a href="show.html" class="text-decoration-none paper"> Post Title 1 </a></h3>
+                    <p class="card-text paper">This is the description of the first post. It's designed to be visually appealing and user-friendly.</p>
                 </div>
             </div>
         </div>
