--- a/show.html
+++ b/show.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notification</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
@@ -30,7 +30,7 @@
 
 <div class="container mt-4">
     <div class="col-md-12">
-        <div class="post-card card mb-4">
+        <div class="card mb-4">
             <div class="card-body">
                 <h3 class="card-title text-center">Post Title 1</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipiscing elit aenean, tellus nam conubia curabitur porta at turpis eget, malesuada vestibulum per platea bibendum interdum laoreet. Nisl sem curabitur himenaeos augue eu tincidunt dictum torquent magnis, rhoncus inceptos diam habitasse lectus netus tortor interdum turpis, potenti aliquet tellus mus taciti pellentesque suspendisse venenatis. Condimentum viverra sociis scelerisque in varius netus nascetur vestibulum massa, porta iaculis lobortis cursus accumsan libero litora etiam nec integer, tellus himenaeos sodales id ligula ullamcorper felis semper. Mattis inceptos magna condimentum luctus eu, leo lacus faucibus tristique arcu malesuada, duis morbi vitae sociis. Nostra cursus justo neque diam sodales eu turpis purus, sagittis aliquam ut et vitae nisl magna, potenti condimentum magnis duis a augue himenaeos. Volutpat fringilla ultrices turpis sodales elementum aenean vivamus nascetur mi, libero porttitor nibh sed dui augue laoreet primis cursus lobortis, lacus a euismod sem commodo morbi senectus netus. Congue vel conubia mus elementum cum erat placerat faucibus habitant, scelerisque pellentesque fusce suscipit bibendum morbi quis nostra a inceptos, tellus montes blandit vehicula id accumsan nibh laoreet. Sodales maecenas magnis condimentum eros quam felis ullamcorper semper enim velit curabitur fames sociis tempor, feugiat urna risus fringilla ut hac malesuada mi sagittis aptent gravida class.</p>
