--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="profile.html">Profile</a>
-                    <a class="dropdown-item" href="#">Logout</a>
+                    <a class="dropdown-item" href="login.html">Logout</a>
                 </div>
             </div>
         </div>
