--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
 <div class="container search-section">
     <div class="row justify-content-center px-2">
-        <div class="col-md-8">
+        <div class="col-md-6 mb-2 mb-md-0">
             <input class="form-control" type="search" placeholder="Search" aria-label="Search">
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mb-2 mb-md-0">
             <select class="form-control">
                 <option selected>Choose filter...</option>
                 <option>Filter 1</option>
@@ -39,15 +39,44 @@
                 <option>Filter 3</option>
             </select>
         </div>
+        <div class="col-md-2">
+            <button class="btn btn-primary w-100">Search</button>
+        </div>
     </div>
 </div>
+
+<!-- New Tab Section Start -->
+<div class="container mt-4">
+    <ul class="nav nav-tabs" id="notificationTabs" role="tablist">
+        <li class="nav-item">
+            <a class="nav-link active" id="all-tab" data-toggle="tab" href="#all" role="tab" aria-controls="all" aria-selected="true">All Notifications</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="important-tab" data-toggle="tab" href="#important" role="tab" aria-controls="important" aria-selected="false">Important Notifications</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="selected-tab" data-toggle="tab" href="#selected" role="tab" aria-controls="selected" aria-selected="false">Selected Notifications</a>
+        </li>
+    </ul>
+    <div class="tab-content" id="notificationTabsContent">
+        <div class="tab-pane fade show active" id="all" role="tabpanel" aria-labelledby="all-tab">
+            <!-- All Notifications Content -->
+        </div>
+        <div class="tab-pane fade" id="important" role="tabpanel" aria-labelledby="important-tab">
+            <!-- Important Notifications Content -->
+        </div>
+        <div class="tab-pane fade" id="selected" role="tabpanel" aria-labelledby="selected-tab">
+            <!-- Selected Notifications Content -->
+        </div>
+    </div>
+</div>
+<!-- New Tab Section End -->
 
 <div class="container mt-4">
     <div class="row">
         <!-- Posts start here -->
         <div class="col-md-6">
             <div class="post-card card mb-4">
-<!--                <img src="path/to/image.jpg" class="card-img-top" alt="...">-->
                 <div class="card-body">
                     <h3 class="card-title text-center"><a href="show.html" class="text-decoration-none paper"> Post Title 1 </a></h3>
                     <p class="card-text paper">This is the description of the first post. It's designed to be visually appealing and user-friendly.</p>
@@ -57,15 +86,27 @@
 
         <div class="col-md-6">
             <div class="post-card card mb-4">
-                <!--                <img src="path/to/image.jpg" class="card-img-top" alt="...">-->
                 <div class="card-body">
-                    <h3 class="card-title text-center"><a href="show.html" class="text-decoration-none paper"> Post Title 1 </a></h3>
-                    <p class="card-text paper">This is the description of the first post. It's designed to be visually appealing and user-friendly.</p>
+                    <h3 class="card-title text-center"><a href="show.html" class="text-decoration-none paper"> Post Title 2 </a></h3>
+                    <p class="card-text paper">This is the description of the second post. It's designed to be visually appealing and user-friendly.</p>
                 </div>
             </div>
         </div>
         <!-- Add more posts here -->
     </div>
+    <!-- Pagination controls start here -->
+    <div class="row justify-content-center mt-4">
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
+        </nav>
+    </div>
+    <!-- Pagination controls end here -->
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
